--- a/layouts/partials/json-resume/basics.html
+++ b/layouts/partials/json-resume/basics.html
@@ -54,7 +54,7 @@
       <hr />
       <div class="jr-basics__profile jr-basics__profile--col">
         {{ range . }}
-          {{ partial "icons/simple-icon.html" (dict "url" .url "network" .network "username" .username) }}
+          {{ partial "icons/simple-icon.html" .network }}
         {{ end }}
       </div>
     {{ end }}
@@ -63,7 +63,7 @@
       <hr />
       <div class="jr-basics__profile jr-basics__profile--row">
         {{ range . }}
-          {{ partial "icons/simple-icon.html" (dict "url" .url "network" .network "username" .username) }}
+          {{ partial "icons/simple-icon.html" .network }}
         {{ end }}
       </div>
     {{ end }}
