Testing new layout5

--- a/layouts/partials/icons/svg.html
+++ b/layouts/partials/icons/svg.html
@@ -1,4 +1,4 @@
-{{ $path := lower . }}
+{{ $path := printf "node_modules/%s" (lower .) }}
 {{ $resource := resources.Get $path }}
 {{ if not $resource }}
   {{ errorf "File '%s' does not exist" $path }}
