Testing new layout8

--- a/assets/css/non-critical/00-vendor.css
+++ b/assets/css/non-critical/00-vendor.css
@@ -1,4 +1,7 @@
 /*! purgecss start ignore */
+{{ range (readDir "assets/prismjs/plugins") }}
+  {{ printf "Plugin folder: %s" .Name | safeHTML }}
+{{ end }}
 
 {{ range $.Site.Params.prism.plugins }}
   {{ $path := printf "prismjs/plugins/%s/prism-%s.css" . . }}
